k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-flask
  namespace: default
  labels:
    app: backend-flask
spec:
  selector:
    app: backend-flask
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
